# snow-64

./: .gitignore  Cargo.toml  Changelog.md  LICENSE  README.md  build.rs  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml  rust.yml
src/: config.rs  graphics.rs  logging.rs  main.rs  model.rs  program.rs  render.rs  texture.rs  utils.rs
src/assets/fonts/: ascii-oldschool.txt
src/assets/shaders/: shader.frag  shader.vert
src/programs/: mod.rs  shell.rs
src/programs/scripting/: mod.rs  rhai_script.rs
src/scripting/: mod.rs  rhai_script.rs
test/tes-game/: entity.rhai  entry.rhai
