[package]
name = "snow64"
version = "0.0.1"
authors = ["harmless-tech"]
edition = "2021"
description = "A fantasy console."
readme = "README.md"
homepage = "TODO URL"
repository = "https://github.com/harmless-tech/snow64"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.23.14", default-features = false, features = ["png"] }
log = "0.4.14"
log4rs = { version = "1.0.0", default-features = false, features = ["console_appender", "file_appender"] }
winit = "0.25.0"
anyhow = "1.0.43"
configparser = "2.1.0"
#lazy_static = "1.4.0"
#seahash = "4.1.0"
#winit_input_helper = "0.11.0"
#snowbinary = { version = "0.1.0", features = ["v_hash"] } TODO Improve this before I use it.
#rhai = "1.0.4"

[build-dependencies]
anyhow = "1.0.43"
fs_extra = "1.2.0"
glob = "0.3.0"
oxipng = "5.0.0"
rayon = "1.5.1"

[profile.release]
opt-level = 3 # "z"
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
