[package]
name = "snow64"
version = "0.0.1"
authors = ["harmless-tech"]
edition = "2021"
description = "A fantasy console."
readme = "README.md"
#homepage = "" TODO: Soon.
repository = "https://github.com/harmless-tech/snow64"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.22.2", default-features = false, features = ["png_codec"] }
log = "0.4.17"
log4rs = { version = "1.1.1", default-features = false, features = ["console_appender", "file_appender"] }
winit = "0.26.1"
anyhow = "1.0.58"
configparser = "3.0.0"
kira = "0.6.0"
# kira-cpal = "0.1.0-beta.0"
pixels = "0.9.0"
#lazy_static = "1.4.0" Maybe don't need?
#seahash = "4.1.0" Maybe don't need?
#winit_input_helper = "0.11.0" Maybe don't need?
#snowbinary = { version = "0.1.0", features = ["v_hash"] } Improve this before I use it.
#rhai = "1.2.1" Maybe switch to another scripting language?

[build-dependencies]
anyhow = "1.0.58"
fs_extra = "1.2.0"
glob = "0.3.0"
oxipng = "5.0.1"
rayon = "1.5.3"

[profile.release]
opt-level = 3 # "z"
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
